--- a/po/wesnoth-manpages/et.po
+++ b/po/wesnoth-manpages/et.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.3-svn\n"
 "POT-Creation-Date: 2011-08-27 10:13+0300\n"
-"PO-Revision-Date: 2010-08-16 09:07+0300\n"
+"PO-Revision-Date: 2011-12-30 19:39+0300\n"
 "Last-Translator: Kaido Kikkas <kakk@kakupesa.net>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -26,7 +26,7 @@ msgstr "WESNOTH"
 #: ../../doc/man/wesnoth.6:16 ../../doc/man/wesnothd.6:16
 #, no-wrap
 msgid "2011"
-msgstr ""
+msgstr "2011"
 
 # type: TH
 #. type: TH
@@ -130,7 +130,7 @@ msgstr "määrab bittide arvu pikseli kohta. N: B<--bpp 32>"
 #: ../../doc/man/wesnoth.6:49
 #, no-wrap
 msgid "B<-c, --campaign[[E<lt>difficultyE<gt>] E<lt>id_campaignE<gt> [E<lt>id_scenarioE<gt>]]>"
-msgstr ""
+msgstr "B<-c, --campaign[[E<lt>difficultyE<gt>] E<lt>id_campaignE<gt> [E<lt>id_scenarioE<gt>]]>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:56
@@ -143,6 +143,11 @@ msgid ""
 "the final argument> aswell, otherwise the game will take the campaign/"
 "scenario id as the data dir."
 msgstr ""
+"läheb parameetritest lähtudes otse sõjakäiku. Raskusaste on 1-st  sõjakäigu "
+"maksimaalse raskusastmeni, vaikimisi on 1. Stsenaarium on üks selle "
+"sõjakäigu stsenaariumitest, vaikimisi esimene.  B<Märkus: selle võtme "
+"kasutamisel lisa kindlasti viimase argumendina andmekataloogi asukoht> , "
+"vastasel juhul käsitleb mäng sõjakäigu või stsenaariumi nime kataloogina."
 
 # type: TP
 #. type: TP
@@ -154,10 +159,6 @@ msgstr "B<--config-dir>I<\\ nimi>"
 # type: Plain text
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:63
-#, fuzzy
-#| msgid ""
-#| "sets the user configuration directory to I<name> under $HOME or \"My "
-#| "Documents\\eMy Games\" for windows."
 msgid ""
 "sets the user configuration directory to I<name> under $HOME or \"My "
 "Documents\\eMy Games\" for windows.  You can also specify an absolute path "
@@ -165,7 +166,8 @@ msgid ""
 "Games\""
 msgstr ""
 "määrab kasutajasätete kataloogiks  I<nimi> kataloogi $HOME või \"My Documents"
-"\\eMy Games\" Windowsi puhul."
+"\\eMy Games\" Windowsi puhul. Võid ka määrata mujal asuva sätetekataloogi "
+"absoluutse kataloogitee."
 
 # type: TP
 #. type: TP
@@ -185,12 +187,12 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:66
 #, no-wrap
 msgid "B<--data-dir E<lt>directoryE<gt>>"
-msgstr ""
+msgstr "B<--data-dir E<lt>directoryE<gt>>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:69
 msgid "overrides the data directory with the one specified"
-msgstr ""
+msgstr "määrab selle kataloogi andmekataloogiks"
 
 # type: TP
 #. type: TP
@@ -219,10 +221,6 @@ msgstr "B<-e,\\ --editor>I<\\ failinimi>"
 # type: Plain text
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:79
-#, fuzzy
-#| msgid ""
-#| "start the in-game map editor directly. If I<file> is specified, "
-#| "equivalent to B<-e --load>"
 msgid ""
 "start the in-game map editor directly. If I<file> is specified, equivalent "
 "to B<-l --load>"
@@ -348,10 +346,9 @@ msgstr ""
 # type: TP
 #. type: TP
 #: ../../doc/man/wesnoth.6:122
-#, fuzzy, no-wrap
-#| msgid "B<--logdomains>"
+#, no-wrap
 msgid "B<--logdomains\\ [filter]>"
-msgstr "B<--logdomains>"
+msgstr "B<--logdomains\\ [filter]>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:127
@@ -359,6 +356,8 @@ msgid ""
 "lists defined log domains (only the ones containing B<filter> if used) and "
 "exits"
 msgstr ""
+"väljastab logidomeenide nimekirja (B<filtri> järgi, kui seda kasutatakse) ja "
+"väljub mängust"
 
 # type: TP
 #. type: TP
@@ -399,12 +398,12 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:139
 #, no-wrap
 msgid "B<--new-syntax>"
-msgstr ""
+msgstr "B<--new-syntax>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:142
 msgid "enables the new campaign syntax parsing."
-msgstr ""
+msgstr "lülitab uue sõjakäigusüntaksi parseri sisse."
 
 # type: TP
 #. type: TP
@@ -479,7 +478,7 @@ msgstr "väljastab mängu andmekataloogi nime ja väljub programmist."
 #: ../../doc/man/wesnoth.6:158
 #, no-wrap
 msgid "B<--preprocess, -p[=E<lt>define1E<gt>,E<lt>define2E<gt>,...] E<lt>file/folderE<gt> E<lt>target directoryE<gt>>"
-msgstr ""
+msgstr "B<--preprocess, -p[=E<lt>define1E<gt>,E<lt>define2E<gt>,...] E<lt>file/folderE<gt> E<lt>target directoryE<gt>>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:172
@@ -495,12 +494,21 @@ msgid ""
 "campaigns/tutorial ~/result> or B<-p=MULTIPLAYER,MY_OWN_CAMPAIGN ~/wesnoth/"
 "data/campaign/camp ~/result>"
 msgstr ""
+"eeltöötleb määratud faili või kataloogi. Failid (tavaline ja töödeldud cfg-"
+"fail) kirjutatakse määratud kataloogi. Kataloogi määramise korral "
+"eeltöödeldakse seda rekursiivselt vastavalt preprotsessori reeglitele.  "
+"Katalogi data/core/macros üldmakrod töödeldakse enne parameetritega "
+"määratuid. B<define1,define2,...> - lisatakse enne failide eeltöötlus "
+"(lisamiseks tuleb kirjutada nende ette võrdusmärk).  Kui nimekiri sisaldab "
+"'SKIP_CORE'-parameetrit, jäetakse data/core eeltöötlemata. Näide: B<-p ~/"
+"wesnoth/data/campaigns/tutorial ~/result> või  B<-p=MULTIPLAYER,"
+"MY_OWN_CAMPAIGN ~/wesnoth/data/campaign/camp ~/result>"
 
 #. type: TP
 #: ../../doc/man/wesnoth.6:172
 #, no-wrap
 msgid "B<--preprocess-input-macros E<lt>source fileE<gt>>"
-msgstr ""
+msgstr "B<--preprocess-input-macros E<lt>source fileE<gt>>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:176
@@ -508,12 +516,14 @@ msgid ""
 "used only by the '--preprocess' command.  Specifies a file that contains "
 "[preproc_define]s to be included before preprocessing."
 msgstr ""
+"kasutatakse ainult --preprocess -käsuga. Määrab faili, kus asuvad enne "
+"eeltöötlust lisatavad definitsioonid."
 
 #. type: TP
 #: ../../doc/man/wesnoth.6:176
 #, no-wrap
 msgid "B<--preprocess-output-macros [E<lt>target fileE<gt>]>"
-msgstr ""
+msgstr "B<--preprocess-output-macros [E<lt>target fileE<gt>]>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:182
@@ -523,6 +533,10 @@ msgid ""
 "file '_MACROS_.cfg' in the target directory of preprocess's command.  This "
 "switch should be typed before the --preprocess command."
 msgstr ""
+"kasutatakse ainult --preprocess -käsuga. Väljastab kõik eeltöödeldud makrod "
+"sihtfaili. Kui failinime pole ette antud, võetakse selleks eeltöötluskäsu "
+"sihtkataloogis asuv '_MACROS.cfg'-fail. See võti tuleks kirjutada enne --"
+"preprocess -käsku."
 
 # type: TP
 #. type: TP
@@ -558,12 +572,12 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:190
 #, no-wrap
 msgid "B<--strict-validation>"
-msgstr ""
+msgstr "B<--strict-validation>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:193
 msgid "validation errors are treated as fatal errors."
-msgstr ""
+msgstr "valideerimisvigasid loetakse kriitilisteks."
 
 # type: TP
 #. type: TP
@@ -880,12 +894,9 @@ msgstr "AUTORIÕIGUS"
 # type: Plain text
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:290 ../../doc/man/wesnothd.6:280
-#, fuzzy
-#| msgid ""
-#| "Copyright \\(co 2003-2009 David White E<lt>davidnwhite@verizon.netE<gt>"
 msgid "Copyright \\(co 2003-2011 David White E<lt>davidnwhite@verizon.netE<gt>"
 msgstr ""
-"Copyright \\(co 2003-2009 David White E<lt>davidnwhite@verizon.netE<gt>"
+"Copyright \\(co 2003-2011 David White E<lt>davidnwhite@verizon.netE<gt>"
 
 # type: Plain text
 #. type: Plain text
@@ -909,10 +920,8 @@ msgstr "LISAINFO"
 # type: TH
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:296
-#, fuzzy
-#| msgid "wesnothd"
 msgid "B<wesnothd>(6)."
-msgstr "wesnothd"
+msgstr "B<wesnothd>(6)."
 
 # type: TH
 #. type: TH
@@ -1788,43 +1797,5 @@ msgstr ""
 # type: TH
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:286
-#, fuzzy
-#| msgid "wesnoth"
 msgid "B<wesnoth>(6)."
-msgstr "wesnoth"
-
-# type: TP
-#~ msgid "B<--smallgui>"
-#~ msgstr "B<--smallgui>"
-
-# type: Plain text
-#~ msgid ""
-#~ "allows to use screen resolutions down to 800x480 and resizes a few "
-#~ "interface elements."
-#~ msgstr ""
-#~ "lubab kasutada eraldusvõimeid kuni 800x480 ja muudab mõningate "
-#~ "kasutajaliidese elementide suurust."
-
-# type: TH
-#~ msgid "2009"
-#~ msgstr "2009"
-
-# type: TP
-#~ msgid "B<-c, --campaign>"
-#~ msgstr "B<-c, --campaign>"
-
-# type: Plain text
-#~ msgid "goes directly to the campaign selection menu."
-#~ msgstr "läheb otse sõjakäikude valimise menüüsse."
-
-# type: Plain text
-#~ msgid "Dumps a list of all log domains and exits."
-#~ msgstr "Väljastab logitasemete nimekirja ja väljub programmist."
-
-# type: Plain text
-#~ msgid "B<wesnoth_editor>(6), B<wesnothd>(6)"
-#~ msgstr "B<wesnoth_editor>(6), B<wesnothd>(6)"
-
-# type: Plain text
-#~ msgid "B<wesnoth>(6), B<wesnoth_editor>(6)"
-#~ msgstr "B<wesnoth>(6), B<wesnoth_editor>(6)"
+msgstr "B<wesnoth>(6)."
