--- a/po/wesnoth-units/et.po
+++ b/po/wesnoth-units/et.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 0.8.8-CVS\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-12-15 10:39+0100\n"
-"PO-Revision-Date: 2010-08-16 09:16+0300\n"
+"POT-Creation-Date: 2011-12-19 15:15+0100\n"
+"PO-Revision-Date: 2011-12-30 12:45+0300\n"
 "Last-Translator: Kaido Kikkas <kakk@kakupesa.net>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -23,16 +23,6 @@ msgstr ""
 #. [unit_type]: id=Dwarvish Masked Dragonguard, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Dragonguard.cfg:18
 #: data/core/units/dwarves/Dragonguard.cfg:20
-#, fuzzy
-#| msgid ""
-#| "It is not clear why the Dragonguards are called what they are, a name "
-#| "given by their dwarven brethren. Some speculate that the name comes from "
-#| "their weapon of choice, these strange staffs that belch fire and death. "
-#| "Others have surmised that it is because such weapons would be a threat "
-#| "against even a true Dragon, should such a thing be seen again in the "
-#| "known world. Whatever the case, it is for these weapons that the "
-#| "guardians of the great Dwarven citadels are both renowned and feared; "
-#| "weapons that have broken the mightiest of warriors with a single blow."
 msgid ""
 "It is not clear why the Dragonguards are called what they are, a name given "
 "by their dwarven brethren. Some speculate that the name comes from their "
@@ -259,19 +249,6 @@ msgstr "kõuekepp"
 #. [unit_type]: id=Dwarvish Masked Thunderguard, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Thunderguard.cfg:21
 #: data/core/units/dwarves/Thunderguard.cfg:21
-#, fuzzy
-#| msgid ""
-#| "The Dwarven Thunderguards are famed for their curious weaponry, these "
-#| "strange staffs of wood and iron that make a thunderous noise in their "
-#| "anger. The machinations behind this weaponry are a mystery, a secret "
-#| "taken to the grave by the dwarves of Knalga who wield them, and are "
-#| "assumed to have even forged them. The most that is known are reports of "
-#| "dwarves pouring a strange black dust into the mouth of their weapons, "
-#| "which some say is a food to fuel the beast imprisoned within.\n"
-#| "\n"
-#| "Though a single shot from these ‘thundersticks’ can take several minutes "
-#| "to prepare, the results are seen by the Dwarves as being well worth the "
-#| "wait."
 msgid ""
 "The Dwarven Thunderguards are famed for their curious weaponry, these "
 "strange staves of wood and iron that make a thunderous noise in their anger. "
@@ -286,10 +263,10 @@ msgid ""
 msgstr ""
 "Päkapike kõuevahid on kuulsad oma imelike relvade poolest. Need veidrad "
 "puust ja rauast sauad teevad kasutades kõuehäält. Nende põhimõte on saladus, "
-"mille seda valdavad Knalga päkapikud endaga hauda kaasa võtavad. Kõik, mis "
-"on teada, on mõned jutud päkapikkudest, kes kallavad oma relvade suudmetesse "
-"imelikku musta tolmu. Mõned arvavad, et see on toit sinna sisse vangistatud "
-"eluka jaoks.\n"
+"mille seda valdavad Knalga päkapikud (kes on kuuldavasti ka nende riistade "
+"valmistajad) endaga hauda kaasa võtavad. Kõik, mis on teada, on mõned jutud "
+"päkapikkudest, kes kallavad oma relvade suudmetesse imelikku musta tolmu. "
+"Mõned arvavad, et see on toit sinna sisse vangistatud eluka jaoks.\n"
 "\n"
 "Kuigi 'kõuekepi' üheainsa lasu ettevalmistamine võib võtta üsna kaua aega, "
 "peavad päkapikud selle tulemust ootamistväärivaks."
@@ -317,6 +294,11 @@ msgid ""
 "their runes cause the physical blows of their enemies to deal less damage "
 "than would be expected."
 msgstr ""
+"Kõrgeim aste, kuhu ruunisepp (välja arvatud need, kelle oskused on peaaegu "
+"üleloomulikud) võib pürgida, on päkapike ruunimeister. Nende jagatavad "
+"hoobid on peaaegu võrdväärsed parimate sõdalaste omadega ja nad oleks "
+"kardetavad ka ilma oma kunstita - kuid sellega koos on nad peaaegu "
+"võitmatud, kuna nende ruunid kahandavad vaenlase antavate hoopide mõju."
 
 #. [attack]: type=cold
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Rune_Lord.cfg:44
@@ -706,7 +688,6 @@ msgstr "Tulesüdalohe"
 
 #. [unit_type]: id=Drake Flameheart, race=drake
 #: data/core/units/drakes/Flameheart.cfg:26
-#, fuzzy
 msgid ""
 "Flamehearts lack the strength to defeat other high-ranking drakes in single "
 "combat, but prefer in any case to avoid confrontation within the tribe. "
@@ -906,9 +887,8 @@ msgstr ""
 
 #. [unit_type]: id=Dwarvish Arcanister, race=dwarf
 #: data/core/units/dwarves/Arcanister.cfg:4
-#, fuzzy
 msgid "Dwarvish Arcanister"
-msgstr "Päkapike võitleja"
+msgstr "Päkapike müstik"
 
 #. [unit_type]: id=Dwarvish Arcanister, race=dwarf
 #: data/core/units/dwarves/Arcanister.cfg:31
@@ -918,6 +898,10 @@ msgid ""
 "that is his intent. His skill in runecrafting is unrivaled, and the glyphs "
 "he carves into his weapons and armor deflect the blows of his enemies."
 msgstr ""
+"Võimsaim kõigist ruuniseppadest, päkapike müstik, suudab tappa juba haavatud "
+"vaenlase peaaegu silmapilkselt ning tema rünnakud lähevad harva eksi. Tema "
+"ruunikunst on võrratu ning tema relvadele ja soomusele lõigatud ruunid "
+"juhivad vaenlase hoobid eemale."
 
 #. [unit_type]: id=Dwarvish Berserker, race=dwarf
 #: data/core/units/dwarves/Berserker.cfg:4
@@ -1003,7 +987,6 @@ msgstr "Päkapike rajaleidja"
 
 #. [unit_type]: id=Dwarvish Pathfinder, race=dwarf
 #: data/core/units/dwarves/Pathfinder.cfg:23
-#, fuzzy
 msgid ""
 "These hardy dwarves are sometimes away from their caves for long periods, "
 "scouting and patrolling the borders. They spend this time watching for "
@@ -1015,13 +998,12 @@ msgstr ""
 "luurekäikudel ja piiride kaitsel. Nad peavad vahti sissetungijate vastu ning "
 "võitlevad röövlite ja varastega, kes päkapikkude maadele kipuvad. Nad on "
 "vägevad lähivõitlejad ja suudavad kaugelt heita kirveid täpsusega, mis "
-"võistleb vibuküttide omaga."
+"võistleb inimeste vibuküttide omaga."
 
 #. [unit_type]: id=Dwarvish Runesmith, race=dwarf
 #: data/core/units/dwarves/Runesmith.cfg:4
-#, fuzzy
 msgid "Dwarvish Runesmith"
-msgstr "Päkapike ruunimeister"
+msgstr "Päkapike ruunisepp"
 
 #. [unit_type]: id=Dwarvish Runesmith, race=dwarf
 #: data/core/units/dwarves/Runesmith.cfg:29
@@ -1031,6 +1013,10 @@ msgid ""
 "and accuracy, and disrupt the blows of their enemies, causing them to strike "
 "softly, weakly and on the armor of the defender."
 msgstr ""
+"Päkapike ruunisepad, kes oma kunsti piisavalt tunnevad, lõikavad müstilisi "
+"ruune oma relvadele ja soomusele. Need annavad tema hoopidele jõu ja täpsusi "
+"ning segavad vaenlase omi, tehes need pehmeks ja nõrgaks ning suunates need "
+"soomusega kaitstud kohtadesse."
 
 #. [unit_type]: id=Dwarvish Scout, race=dwarf
 #: data/core/units/dwarves/Scout.cfg:4
@@ -1433,7 +1419,6 @@ msgstr "Haldjate täpsuskütt"
 
 #. [unit_type]: id=Elvish Marksman, race=elf
 #: data/core/units/elves/Marksman.cfg:19
-#, fuzzy
 msgid ""
 "Elves are wonderously keen-sighted, a gift which contributes to their "
 "mastery of the bow. An elf practiced at archery can hit targets that a man "
@@ -1443,9 +1428,9 @@ msgid ""
 msgstr ""
 "Üheks haldjate suure vibukunsti põhjuseks on nende ebatavaliselt terav "
 "nägemine.  Vibukunstis vilunud haldjas võib tabada märki, mida inimene isegi "
-"näe, ja seda ka öösel. Samuti võib haldjas saata lendu järgmise noole pea  "
-"kohe eelmise järel. See vibukunst aga saavutatakse ühe asja hinnaga, nimelt "
-"jääb mõõgakunsti õppimiseks vähem aega."
+"näe, samuti võib haldjas saata lendu järgmise noole pea  kohe eelmise järel. "
+"See vibukunst aga saavutatakse ühe asja hinnaga, nimelt jääb mõõgakunsti "
+"õppimiseks vähem aega."
 
 #. [attack]: type=pierce
 #: data/core/units/elves/Marksman.cfg:72
@@ -1628,7 +1613,6 @@ msgstr "Haldjate metsavaim"
 
 #. [unit_type]: id=Elvish Shyde, race=elf
 #: data/core/units/elves/Shyde.cfg:22
-#, fuzzy
 msgid ""
 "Devotion to the path of faerie may eventually transform an elf maiden into a "
 "creature of both worlds. Guided by a power which is little understood, these "
@@ -1636,8 +1620,8 @@ msgid ""
 "their people."
 msgstr ""
 "Pühendumine võlukunsti maailmale muudab haldjaneiud viimaks pooleldi "
-"ebamaisteks olenditeks. Neid juhib loodus ise ning need haldjametsade kaunid "
-"hoidjad on selle rahva graatsia ja salapära võrdkujuks."
+"ebamaisteks olenditeks. Neid juhib mingi hoomamatu vägi ning need "
+"haldjametsade kaunid hoidjad on selle rahva graatsia ja salapära võrdkujuks."
 
 #. [attack]: type=impact
 #: data/core/units/elves/Shyde.cfg:41 data/core/units/elves/Sylph.cfg:40
@@ -3318,7 +3302,6 @@ msgstr "Rajaleidja"
 
 #. [unit_type]: id=Ranger, race=human
 #: data/core/units/humans/Woodsman_Ranger.cfg:22
-#, fuzzy
 msgid ""
 "Rangers are wild men and wanderers, who have chosen to shun the company of "
 "their fellow men for myriad reasons. They have spent the better part of "
@@ -3340,7 +3323,7 @@ msgstr ""
 "\n"
 "Nende meeste kohalolek häirib võimukaid valitsejaid: neid ei saa relvajõule "
 "allutada. Nende põhimõtted on kahtlased ning nad on esimesed, kes "
-"kuninglikele seadustele vilistavad, või ei tee neist üldse välja. "
+"kuninglikele seadustele vilistavad või ei tee neist üldse välja. "
 "Rajaleidjaid saab värvata, kuid nad võivad sama hästi kui kuningat teenida "
 "ka kurikaelu."
 
@@ -3738,9 +3721,8 @@ msgstr "sabahoop"
 
 #. [unit_type]: id=Fire Guardian, race=monster
 #: data/core/units/monsters/Fire_Guardian.cfg:4
-#, fuzzy
 msgid "Fire Guardian"
-msgstr "Draakon"
+msgstr "Tulevalvur"
 
 #. [unit_type]: id=Fire Guardian, race=monster
 #: data/core/units/monsters/Fire_Guardian.cfg:28
@@ -3750,12 +3732,15 @@ msgid ""
 "their bidding. When not being controlled they like to frolic in pools of "
 "lava and take great delight in burning anything they can reach."
 msgstr ""
+"Tulevalvurid on suitsu ja leegi vaimud. Keegi ei tea täpselt, kust nad pärit "
+"on, ent aeg-ajalt kutsuvad vägevad võlurid neid enda teenistusse. Kui neid "
+"ei juhi mõni võimsam tahe, armastavad nad peesitada laavaväljadel ning "
+"tunnevad suurt lõbu kõige kättesaadava mahapõletamisest."
 
 #. [attack]: type=fire
 #: data/core/units/monsters/Fire_Guardian.cfg:31
-#, fuzzy
 msgid "fire claws"
-msgstr "küünised"
+msgstr "tuleküünised"
 
 #. [unit_type]: id=Giant Mudcrawler, race=monster
 #: data/core/units/monsters/Giant_Mudcrawler.cfg:4
@@ -3792,7 +3777,7 @@ msgstr "mudapomm"
 #. [unit_type]: id=Giant Rat, race=monster
 #: data/core/units/monsters/Giant_Rat.cfg:4
 msgid "Giant Rat"
-msgstr ""
+msgstr "Hiidrott"
 
 #. [unit_type]: id=Giant Rat, race=monster
 #: data/core/units/monsters/Giant_Rat.cfg:18
@@ -3800,6 +3785,8 @@ msgid ""
 "Given an adequate supply of food, some rats can grow to truly impressive "
 "sizes. They can also grow quite aggressive."
 msgstr ""
+"Piisava toiduhulga korral kasvavad mõned rotid tohutu suurteks. Nad muutuvad "
+"ka üpris riiakateks."
 
 #. [unit_type]: id=Giant Scorpion, race=monster
 #: data/core/units/monsters/Giant_Scorpion.cfg:4
@@ -3948,17 +3935,13 @@ msgstr ""
 
 #. [unit_type]: id=Direwolf, race=wolf
 #: data/core/units/monsters/Wolf_Dire.cfg:4
-#, fuzzy
-#| msgid "Direwolf Rider"
 msgid "Direwolf"
-msgstr "Vargiratsanik"
+msgstr "Varg"
 
 #. [unit_type]: id=Great Wolf, race=wolf
 #: data/core/units/monsters/Wolf_Great.cfg:4
-#, fuzzy
-#| msgid "Great Troll"
 msgid "Great Wolf"
-msgstr "Suurtroll"
+msgstr "Hiigelhunt"
 
 #. [unit_type]: id=Yeti, race=monster
 #: data/core/units/monsters/Yeti.cfg:4
@@ -4029,13 +4012,6 @@ msgstr "Nagavägilane"
 
 #. [female]
 #: data/core/units/nagas/Myrmidon.cfg:96
-#, fuzzy
-#| msgid ""
-#| "The most practiced of the nagani blademasters are initiated into the "
-#| "caste of the Myrmidon, masters of their twin-bladed art. They strike as "
-#| "fast as the snakes which they resemble, and dance away from attacks with "
-#| "grace. Not only are they potent enemies on any open terrain, but their "
-#| "ability to swim allows them a deadly mobility."
 msgid ""
 "The most practiced of the nagini blademasters are initiated into the caste "
 "of the Myrmidon, masters of their twin-bladed art. They strike as fast as "
@@ -4046,8 +4022,8 @@ msgstr ""
 "Kõige kogenumad nagadest mõõgakeerutajad, kes omandavad täiuslikult kahe "
 "mõõga kunsti, võetakse vastu vägilaste seisusesse. Nad ründavad mao "
 "kiirusega ja tantsisklevad ära vastase rünnakute eest. Nad pole mitte üksnes "
-"tugevad vastased mistahes avatud maastikul, vaid ka üliohtlikud vastased "
-"vees."
+"tugevad vastased mistahes avatud maastikul, vaid ka üliohtlikud ja kiired "
+"vastased vees."
 
 #. [unit_type]: id=Naga Warrior, race=naga
 #: data/core/units/nagas/Warrior.cfg:4
@@ -4077,14 +4053,6 @@ msgstr "Nagasõdalane"
 
 #. [female]
 #: data/core/units/nagas/Warrior.cfg:93
-#, fuzzy
-#| msgid ""
-#| "Many of the young warriors of the nagani aspire for the day when they "
-#| "merit their second blade. Their martial practice of using twin blades is "
-#| "wholly unlike that of the Orcs and other races, for they have begun to "
-#| "learn the art of using their serpentine form to best effect, twisting and "
-#| "turning to dodge from blows. This makes them potent on land, but the "
-#| "friction of water greatly impedes their ability to do this."
 msgid ""
 "Many of the young warriors of the nagini aspire for the day when they merit "
 "their second blade. Their martial practice of using twin blades is wholly "
@@ -4223,7 +4191,6 @@ msgstr "Orkipealik"
 
 #. [unit_type]: id=Orcish Leader, race=orc
 #: data/core/units/orcs/Leader.cfg:20
-#, fuzzy
 msgid ""
 "Unusually cunning orcs tend to find themselves as the leaders of warrior "
 "bands. They carry a crossbow out of necessity, but are much more skilled "
@@ -4232,7 +4199,7 @@ msgid ""
 "fight with uncharacteristic boldness."
 msgstr ""
 "Eriti kavalad orkid saavad tihti orkijõukude juhtideks. Nad kannavad "
-"vajaduse tõttu vibu, kuid on palju osavamad mõõgaga. Need orkid on võimsad "
+"vajaduse tõttu ambu, kuid on palju osavamad mõõgaga. Need orkid on võimsad "
 "sõdalased, kuid neil on ka teatav mõju teiste, eriti aga mäekollide üle, "
 "keda nad suudavad õhutada võitlema ebatavalise vaprusega."
 
@@ -4243,7 +4210,6 @@ msgstr "Orkide valitseja"
 
 #. [unit_type]: id=Orcish Ruler, race=orc
 #: data/core/units/orcs/Ruler.cfg:19
-#, fuzzy
 msgid ""
 "Any orc who can keep a large tribe from feuding and in-fighting is often "
 "unusually intelligent and commanding, and is inevitably very strong as well. "
@@ -4253,7 +4219,7 @@ msgid ""
 msgstr ""
 "Ork, kes suudab hoida oma suurt hõimu omavahel kaklemast, on tihti "
 "ebatavaliselt taibukas ja võimukas ning vältimatult ka väga tugev. Need "
-"orkid on vilunud nii mõõga kui vibuga, kuid nende tõeline oskus on "
+"orkid on vilunud nii mõõga kui ammuga, kuid nende tõeline oskus on "
 "haruldases võimes juhtida teisi orke lahingus ning anda käske, mida "
 "täidetakse ustavusest, mitte hirmust."
 
@@ -4637,7 +4603,7 @@ msgstr ""
 #. [unit_type]: id=Ghast, race=undead
 #: data/core/units/undead/Corpse_Ghast.cfg:4
 msgid "Ghast"
-msgstr ""
+msgstr "Jälkus"
 
 #. [unit_type]: id=Ghast, race=undead
 #: data/core/units/undead/Corpse_Ghast.cfg:20
@@ -4649,6 +4615,11 @@ msgid ""
 "flesh straight from their foes. Once their enemy is defeated, they eat the "
 "rest of the body, gaining strength in the process."
 msgstr ""
+"Jälkus on olevus, mis pärineb inimsoo kõige tumedamatest unenägudest. "
+"Erinevalt oma väiksematest sugulastest manalastest ja surnusööjatest ei "
+"hakka nemad ootama oma ohvri surma, enne kui teda sööma asuvad. Nad ründavad "
+"enda hirmsate suudega ja rebivad ohvri liha luudelt. Kui vastane on surnud, "
+"söövad nad ülejäänud keha  ja muutuvad nõnda tugevamateks."
 
 #. [unit_type]: id=Ghoul, race=undead
 #: data/core/units/undead/Corpse_Ghoul.cfg:4
@@ -5047,7 +5018,6 @@ msgstr "Kalmuline"
 
 #. [unit_type]: id=Revenant, race=undead
 #: data/core/units/undead/Skele_Revenant.cfg:19
-#, fuzzy
 msgid ""
 "Given false life to do battle once more, the creatures known as Revenants "
 "were clearly great warriors in their time, though the memory of that time is "
@@ -5056,8 +5026,8 @@ msgid ""
 "powerful tool in combat: a fearless warrior that feels no pain and will "
 "fight to the bitter end."
 msgstr ""
-"Võideldes uuesti enda võltselus, olid kalmulistena tuntud olevused kunagi "
-"oma aja suured sõdalased, kuid mälestus sellest ajast on nüüdseks kustunud. "
+"Võideldes taas enda libaelus, olid kalmulistena tuntud olevused kunagi oma "
+"aja suured sõdalased, kuid mälestus sellest ajast on nüüdseks kustunud. "
 "Isegi võlurid,  kes nad üles äratasid, võivad üksnes aimata nende minevikku. "
 "Jättes need küsimused kõrvale, on kalmuline aga võimas sõjariist - kartmatu "
 "võitleja, kes ei tunne valu ja võitleb kibeda lõpuni."
@@ -5295,12 +5265,10 @@ msgstr ""
 "Puuvaimud pole üleüldse sõjakad, kuid on väga tugevad. Arusaadavalt pole nad "
 "aga kuigi liikuvad."
 
-#, fuzzy
 #~| msgid "longsword"
 #~ msgid "long sword"
 #~ msgstr "mõõk"
 
-#, fuzzy
 #~| msgid "Elder Mage"
 #~ msgid "Elder Falcon"
 #~ msgstr "Vana võlur"
