updated German translation

--- a/po/wesnoth-dw/de.po
+++ b/po/wesnoth-dw/de.po
@@ -2,11 +2,11 @@
 # Oliver »Crommy« Lange <oli-lange@web.de>, 2010 - 2011
 msgid ""
 msgstr ""
-"Project-Id-Version: Battle for Wesnoth 1.9\n"
+"Project-Id-Version: Battle for Wesnoth 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2011-03-27 18:14+0100\n"
-"Last-Translator: Crommy\n"
+"POT-Creation-Date: 2011-12-19 15:14+0100\n"
+"PO-Revision-Date: 2011-12-29 20:13+0100\n"
+"Last-Translator: Crommy <oli-lange äd web.de>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -625,24 +625,22 @@ msgstr "Das ist unmöglich!"
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:444
 msgid "With their master gone, the undead are vanishing!"
-msgstr ""
+msgstr "Ohne Herrn und Gebieter verschwinden die Unholde!"
 
 #. [unit]: type=Dread Bat, id=Fearsome Bat
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:458
 msgid "Fearsome Bat"
-msgstr ""
+msgstr "Fürchterliche Fledermaus"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:473
-#, fuzzy
-#| msgid "Look! There is a bat cowering in the corner here."
 msgid "Look! There is a massive bat back here."
-msgstr "Schaut! Da ist eine Fledermaus hier in der Ecke."
+msgstr "Schaut! Hier hinten ist so’n riesiges Fledervieh."
 
 #. [message]: speaker=Gwabbo
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:477
 msgid "Be courageous, and attack it anyway!"
-msgstr ""
+msgstr "Stell’ dich nicht an - mach sie fertig!"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:481
@@ -650,38 +648,46 @@ msgid ""
 "But it isn’t attacking <i>me</i>. Do you think, with its master gone, it "
 "might desire a new one?"
 msgstr ""
+"Aber sie ist gar nicht böse zu <i>mir</i>. Glaubst du, dass sie sich – so "
+"allein und ohne Herrchen – nach einem Neuen sehnt?"
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:485
 msgid ""
 "If it does not attack, we shall not kill it. Let us see if it follows us."
 msgstr ""
+"Wenn sie nix macht, lass sie doch einfach in Ruhe. Vielleicht folgt sie uns "
+"ja von selbst."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:491
 msgid "That is a mighty bat!"
-msgstr ""
+msgstr "Was ein riesen Vieh!"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:495
 msgid "It is no matter. I will destroy it immediately."
-msgstr ""
+msgstr "Kein Problem. Die mach ich zum Plattfisch!"
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:499
 msgid ""
 "Hold a moment! Do you think, with its master gone, it might desire a new one?"
 msgstr ""
+"Halt ein! Was meinst du? So allein und ohne Herrchen sehnt sie sich "
+"vielleicht nach einem Neuen?"
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:503
 msgid "If it does not attack, do not kill it. Let us see if it follows us."
 msgstr ""
+"Wenn sie nix macht, lass’ sie doch einfach in Ruhe. Vielleicht folgt sie uns "
+"ja von selbst."
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:540
 msgid "With their master gone, the undead are fading away!"
-msgstr ""
+msgstr "Ohne ihren dunklen Gebieter sind die Untoten ein Nichts."
 
 #. [unit]: type=Vampire Bat, id=Friendly Bat
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:555
@@ -690,10 +696,8 @@ msgstr "Freundliche Fledermaus"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:570
-#, fuzzy
-#| msgid "Look! There is a bat cowering in the corner here."
 msgid "And look! There is a bat cowering in the corner here."
-msgstr "Schaut! Da ist eine Fledermaus hier in der Ecke."
+msgstr "Schaut! Hier in der Ecke versteckt sich eine Fledermaus."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:574
@@ -733,7 +737,7 @@ msgstr "Schaut! Da ist eine Fledermaus hier in der Ecke."
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:601
 msgid "Aren’t you going to kill it? We need to keep moving."
 msgstr ""
-"Du wirst sie nicht töten? Wir haben keine Zeit für so etwas. Wir müssen "
+"Willt du sie nicht töten? Wir haben keine Zeit für so etwas. Wir müssen "
 "weiter!"
 
 #. [message]: speaker=second_unit
@@ -749,33 +753,31 @@ msgstr "Offenbar hast du nun eine Fledermaus."
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:647
 msgid "With their master gone, the skeletons are crumbling!"
-msgstr ""
+msgstr "Ohne ihren dunklen Gebieter zerfallen die Skelette zu Staub!"
 
 #. [unit]: type=Walking Corpse, id=Undead Bat
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:660
-#, fuzzy
-#| msgid "Undead"
 msgid "Undead Bat"
-msgstr "Untote"
+msgstr "Untote Fledermaus"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:669
-#, fuzzy
-#| msgid "Look! There is a bat cowering in the corner here."
 msgid ""
 "Look! There is a bat in the corner here. It is moving, but it looks half "
 "dead."
-msgstr "Schaut! Da ist eine Fledermaus hier in der Ecke."
+msgstr ""
+"Schaut! Hier ist eine Fledermaus in der Ecke. Igitt! Sie bewegt sich, obwohl "
+"sie halbtot ausschaut!"
 
 #. [message]: speaker=Gwabbo
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:678
 msgid "No, that thing is all the way dead."
-msgstr ""
+msgstr "Das Ding ist toter als Stinkefisch."
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:684
 msgid "Actually, I believe it is truly dead."
-msgstr ""
+msgstr "Ja, wahrhaftig ohne Leben."
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:690
@@ -783,25 +785,23 @@ msgid ""
 "I believe it is undead and has no will of its own, but the Kai may have the "
 "will power to direct it."
 msgstr ""
+"Sei es auch tot und hat es auch keinen eigenen Willen, aber ich denke den "
+"Kräften des Cais wird sie sich unterwerfen."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:694
 msgid "Fascinating. I shall certainly try."
-msgstr ""
+msgstr "Meinen Kräften? Faszinierend, das muss ich versuchen."
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:706
-#, fuzzy
-#| msgid "Look, this chest was in his tent. It is filled with gold!"
 msgid "He had a chest in his tent, too. It is filled with gold!"
-msgstr "Jauche und Levkojen! Diese Goldkiste war in ihrem Nest!"
+msgstr "Jauche und Levkojen! Diese Goldkiste war in ihrer Höhle!"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:718
-#, fuzzy
-#| msgid "You receive 100 gold."
 msgid "You receive 120 gold."
-msgstr "Ihr erhaltet 100 Goldstücke."
+msgstr "Ihr erhaltet 120 Goldstücke."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:725
@@ -824,8 +824,8 @@ msgid ""
 "Killing these enemies was good, but there were many more on the way. It will "
 "take greater might than we have to defeat them."
 msgstr ""
-"Gut, gut. Der Feind ist zunächst vernichtet, aber es kommen noch mehr. Es "
-"braucht eine größere Macht als unsere, auch diese zu vernichten."
+"Gut, gut. Der Feind ist zunächst vernichtet, aber sie strömen herbei. Es "
+"braucht eine größere Macht als unsere, auch dieser Flut zu trotzen."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:844
@@ -841,8 +841,8 @@ msgstr "Wolfsküste"
 #: data/campaigns/Dead_Water/scenarios/03_Wolf_Coast.cfg:20
 msgid "Distrustful of the open ocean, Kai Krellis led his people up the coast."
 msgstr ""
-"Den Tiefen des Ozeans misstrauend führt Cai Krellis sein Volk die Küste "
-"hinauf."
+"Den Tiefen des Ozeans misstrauend, führt Cai Krellis sein Volk die Küste "
+"entlang."
 
 #. [part]
 #: data/campaigns/Dead_Water/scenarios/03_Wolf_Coast.cfg:24
@@ -854,7 +854,7 @@ msgid ""
 "their own kind."
 msgstr ""
 "Als sie sich gerade auf den Weg machten, stießen sie auf ein Rudel Wölfe, "
-"angelockt vom Gestank der Schlacht. Auf einigen ritten Kobolde, selbst von "
+"angelockt vom Schlachtgetümmel. Auf einigen ritten Kobolde, selbst von "
 "ihresgleichen verfemte Kreaturen. Wo die Orks von Tirigaz, eingedenk der "
 "Lektion, die ihnen Cai Laudiss erteilte, sich zurückgehalten hätten, stießen "
 "die tumberen Kobolde vor."
@@ -1892,7 +1892,7 @@ msgid ""
 "I am sure it was Cylanna’s idea that you come here. She has a reason. Don’t "
 "you Cylanna? Tell him what it is."
 msgstr ""
-"Das war doch sicher Cylannas Idee herzukommen, oder? Sie kent die Gründe, "
+"Das war doch sicher Cylannas Idee herzukommen, oder? Sie kennt die Gründe, "
 "oder? Sag’s ihm, los!"
 
 #. [message]: speaker=Cylanna
@@ -1928,20 +1928,15 @@ msgstr "Was? Wie kann das sein?"
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/08_Talking_to_Tyegea.cfg:209
-#, fuzzy
-#| msgid ""
-#| "When your grandfather married Indress, he he did not know that Tyegëa had "
-#| "already born him a son. When she delivered your father to Jotha, your "
-#| "grandmother Indress agreed to keep it secret and raise the infant as her "
-#| "own."
 msgid ""
 "When your grandfather married Indress, he did not know that Tyegëa had "
 "already born him a son. When she delivered your father to Jotha, your "
 "grandmother Indress agreed to keep it secret and raise the infant as her own."
 msgstr ""
 "Als dein Großvater Indress zur Frau nahm, wusste er nichts von dem Sohn, den "
-"Tyegëa ihm gebar. Als sie ihn nach Jotha brachte, schloss Indress das Baby "
-"in ihr Herz und nahm ihn an, als wär’s ihr eigenes Kind."
+"Tyegëa ihm bereits geboren hatte. Als sie deinen Vater sodann im Geheimen "
+"nach Jotha brachte, schloss Indress das Baby in ihr Herz und nahm ihn an, "
+"als wär’s ihr eigenes Kind."
 
 #. [message]: speaker=Tyegea
 #: data/campaigns/Dead_Water/scenarios/08_Talking_to_Tyegea.cfg:213
@@ -2012,14 +2007,6 @@ msgstr ""
 
 #. [message]: speaker=Tyegea
 #: data/campaigns/Dead_Water/scenarios/08_Talking_to_Tyegea.cfg:237
-#, fuzzy
-#| msgid ""
-#| "I have long desired to see the sword returned to the merfolk to whom it "
-#| "should belong. If you retrieve it, you would prove yourself to be worthy "
-#| "of whatever help I was to provide. I do not know precisely where to find "
-#| "the sword, but I know one who does. South of the Swamp of Desolation, "
-#| "near a ruined castle, lives a mage named Caladon. He has lusted after the "
-#| "sword for years, so he will know where to find the lich who keeps it."
 msgid ""
 "I have long desired to see the sword returned to the merfolk to whom it "
 "should belong. If you retrieve it, you would prove yourself to be worthy of "
@@ -2046,8 +2033,8 @@ msgid ""
 "There is only one of them. If you cannot defeat even one lich, you must be "
 "expecting me to get rid of all of your undead myself!"
 msgstr ""
-"Nur einer. Wenn das schon zu viel ist, sollte ich deine Untoten alle alleine "
-"bezwingen, oder was?"
+"Nur einer. Erwartest du, dass ich alle Untoten alleine bezwinge, wenn "
+"eineinziger Lich für dich bereits zu viel ist?"
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/08_Talking_to_Tyegea.cfg:249
@@ -3123,8 +3110,6 @@ msgstr "Schwanz"
 
 #. [set_variable]
 #: data/campaigns/Dead_Water/units/Brawler.cfg:197
-#, fuzzy
-#| msgid "stunned"
 msgid "female^stunned"
 msgstr "gelähmt"
 
@@ -3372,13 +3357,10 @@ msgstr ""
 "ihn nicht jemand ausprobieren?"
 
 #: data/campaigns/Dead_Water/utils/specials.cfg:4
-#, fuzzy
-#| msgid ""
-#| " This unit is able stun its enemies, disrupting their zones of control."
 msgid ""
 " This unit is able to stun its enemies, disrupting their zones of control."
 msgstr ""
-"Diese Einheit kann Gegner lähmen und ihre Kontrollzone außer Kraft setzen."
+"Diese Einheit kann Gegner lähmen und setzt so deren Kontrollzone außer Kraft."
 
 #. [damage]: id=tail_stun
 #: data/campaigns/Dead_Water/utils/specials.cfg:9
@@ -3387,17 +3369,13 @@ msgstr "Lähmung"
 
 #. [damage]: id=tail_stun
 #: data/campaigns/Dead_Water/utils/specials.cfg:10
-#, fuzzy
-#| msgid ""
-#| "This attack hits so hard that the defender is dazed and can no longer "
-#| "enforce a zone of control. The effect wears off on the defenders next turn"
 msgid ""
 "This attack hits so hard that the defender is dazed and can no longer "
 "enforce a zone of control. The effect wears off on the defender’s next turn."
 msgstr ""
-"Dieser Angriff betäubt das Opfer, so dass dieser keine Kontrollzone "
-"aufrechterhalten kann. Dieser Effekt wirkt nur bis zur nächsten Runde des "
-"Verteidigers."
+"Dieser Angriff betäubt das Opfer, so dass keine Kontrollzone "
+"aufrechterhalten wird. Dieser Effekt wirkt nur bis zur nächsten Runde des "
+"Opfers."
 
 #~ msgid "You receive 200 gold."
 #~ msgstr "Ihr erhaltet 200 Goldstücke."
