--- a/po/wesnoth-tsg/de.po
+++ b/po/wesnoth-tsg/de.po
@@ -3,11 +3,11 @@
 #  Oliver 'Crommy' Lange <oli-lange@web.de>, 2008 - 2010
 msgid ""
 msgstr ""
-"Project-Id-Version: Battle for Wesnoth 1.8\n"
+"Project-Id-Version: Battle for Wesnoth 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2011-11-30 14:15+0100\n"
-"Last-Translator: Nils Kneuper <crazy-ivanovic  AT gmx  D O  T net>\n"
+"PO-Revision-Date: 2011-12-29 21:47+0100\n"
+"Last-Translator: Crommy <oli-lange äd web.de>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -1379,8 +1379,7 @@ msgstr "Ha! Ihr seid zu spät. Wir haben, was wir suchten!"
 #. [message]: speaker=Jera Ilras
 #: data/campaigns/The_South_Guard/scenarios/04_Vale_of_Tears.cfg:216
 msgid "Now your blood and tears will join that of the elves!"
-msgstr ""
-"Nun werden sich euer Blut und eure Tränen mit denen der Elfen vermischen!"
+msgstr "Nun können Langohrblut und Menschentränen den Boden tränken!"
 
 #. [objective]: condition=win
 #: data/campaigns/The_South_Guard/scenarios/04_Vale_of_Tears.cfg:222
@@ -1443,20 +1442,19 @@ msgstr ""
 #. [message]: speaker=unit
 #: data/campaigns/The_South_Guard/scenarios/04_Vale_of_Tears.cfg:311
 msgid "I shall not join these accursed undead! Bury me deeply my friends..."
-msgstr "Ich will nicht wiedererweckt werden. Vergrabt mich tief, Freunde…"
+msgstr "Überlasst mich nicht den Untoten, Feunde. Begrabt mich tief…"
 
 #. [message]: speaker=Ethiliel
 #: data/campaigns/The_South_Guard/scenarios/04_Vale_of_Tears.cfg:321
 msgid "You shall not die in vain! My bodyguard will avenge you!"
-msgstr ""
-"Euer Tod soll nicht umsonst gewesen sein. Mein Leibwächter wird euch rächen."
+msgstr "Euer Tod soll nicht ungestraft bleiben! Leibwache! Herbei!"
 
 #. [message]: speaker=Sir Gerrick
 #. [message]: speaker=Deoran
 #: data/campaigns/The_South_Guard/scenarios/04_Vale_of_Tears.cfg:326
 #: data/campaigns/The_South_Guard/scenarios/04_Vale_of_Tears.cfg:331
 msgid "You have a bodyguard?!"
-msgstr "Ihr habt einen Leibwächter?!"
+msgstr "Leibwache?! Wo?"
 
 #. [unit]: role=Elvish Bodyguard, type=Elvish Ranger
 #: data/campaigns/The_South_Guard/scenarios/04_Vale_of_Tears.cfg:386
@@ -1469,18 +1467,18 @@ msgid ""
 "We stand ready, my lady, to protect you! We shall lead these men of Wesnoth "
 "into the fray!"
 msgstr ""
-"Wir sind hier, um euch zu beschützen, Herrin. Wir werden die Männer Wesnoths "
-"erledigen."
+"Zu eurem Schutze, Herrin, führen wir die Männer Wesnoths ins "
+"Schlachtgetümmel."
 
 #. [message]: speaker=unit
 #: data/campaigns/The_South_Guard/scenarios/04_Vale_of_Tears.cfg:417
 msgid "For my lady I fall..."
-msgstr "Ich sterbe gern für meine Herrin…"
+msgstr "Für meine Herrin sterbe ich gern…"
 
 #. [message]: speaker=Mal A'kai
 #: data/campaigns/The_South_Guard/scenarios/04_Vale_of_Tears.cfg:429
 msgid "Finally, release! Thank you, my friends..."
-msgstr "Endlich Ruhe. Ich danke euch…"
+msgstr "Ich … Licht, endlich, Lich…"
 
 #. [message]: speaker=Jera Ilras
 #: data/campaigns/The_South_Guard/scenarios/04_Vale_of_Tears.cfg:480
@@ -1680,7 +1678,7 @@ msgstr "Untersucht das Gebiet jenseits des Schwarzen Flusses."
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:303
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:310
 msgid "The master of the undead is defeated!"
-msgstr "Der Meister der Untoten ist gefallen!"
+msgstr "Der dunkle Meister ist gefallen!"
 
 #. [message]: speaker=Minister Hylas
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:317
@@ -1748,7 +1746,7 @@ msgid ""
 msgstr ""
 "Vor einem Jahr drangen wir heimlich in das Land der Elfen ein und entführten "
 "einen großen Weisen. Wir zwangen ihn, uns die Geheimnisse dieses Waldes und "
-"der Untoten zu verraten."
+"das des untoten Lebens zu enthüllen."
 
 #. [message]: speaker=Ethiliel
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:408
@@ -1768,10 +1766,10 @@ msgid ""
 "he served us, but now he has gone mad and is attacking us as well!"
 msgstr ""
 "Hört mich an! Er war es der uns die dunklen Pfade wies. Doch wir waren "
-"schwach und närrisch, und als wir die Untoten herbeiriefen, konnten wir sie "
-"nicht beherrschen. Auch Mebrin erlag den Einflüsterungen des Bösen, das er "
-"anrief — und nun führt er sie an. Zunächst diente er uns, doch nun gehorcht "
-"er nur seinem Wahn. Niemand ist vor ihm sicher!"
+"schwach und närrisch und die Geister, die wir riefen, wurden wir nicht mehr "
+"los. Auch der Meister erlag den Einflüsterungen des Bösen, welches er anrief "
+"— und nun führt er sie an. Zunächst diente er uns, doch nun gehorcht er nur "
+"seinem Wahn. Niemand ist vor ihm sicher!"
 
 #. [message]: speaker=Ethiliel
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:419
@@ -1793,7 +1791,7 @@ msgid ""
 "Join us in the fight! Together we can drive off these cruel undead and "
 "restore peace to the land."
 msgstr ""
-"Helft uns in diesem Kampf! Zusammen können wir die Untoten besiegen und "
+"Helft uns in diesem Kampf! Nur gemeinsam können wir die Untoten besiegen und "
 "diesem Land den Frieden zurückgeben."
 
 #. [message]: speaker=Sir Gerrick
@@ -1812,8 +1810,8 @@ msgid ""
 "But think of the destruction they wrought on your borders! You cannot ally "
 "yourselves with these evil men! Vengeance!"
 msgstr ""
-"Aber bedenkt das Leid, das sie in eure Landen trugen! Ihr wollt euch doch "
-"nicht wirklich mit diesen Schurken verbünden!"
+"Aber bedenkt das Leid, das sie in eure Landen trugen! Es wäre ein Bündnis "
+"des Bösen, keine Vergeltung!"
 
 #. [message]: speaker=Deoran
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:445
@@ -1829,8 +1827,7 @@ msgstr ""
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:447
 msgid "Very well. All men must unite against the undead."
 msgstr ""
-"Nun gut. Alle Menschen von Wesnoth müssen sich gegen die Untoten "
-"zusammenschließen."
+"Nun gut. Alle Menschen von Wesnoth müssen sich gegen die Untoten vereinen."
 
 #. [message]: speaker=Urza Afalas
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:505
@@ -1874,7 +1871,7 @@ msgstr ""
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:551
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:613
 msgid "Find the source of the undead and destroy it"
-msgstr "Ermittelt die Quelle der Untoten und vernichtet sie"
+msgstr "Findet den Ursprung der Untoten und vernichtet diesen"
 
 #. [objective]: condition=lose
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:567
@@ -1893,7 +1890,8 @@ msgstr "Eure Taten wiegen zu schwer! Teilt das Los dieses untoten Packs!"
 msgid "Then this parley is over! You may have sounded the doom of all of us!"
 msgstr ""
 "So sind der Worte genug gewechselt! Hört dessen arroganten Klang "
-"verschallen, denn ebenso unnütz wird unser aller Leben verklingen, du Narr."
+"verschallen, denn ebenso unnütz wird unser aller Leben verklingen, du "
+"soldatischer Narr."
 
 #. [message]: speaker=Ethiliel
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:602
